# ig-dp-dl

./: Makefile  README.md  pyproject.toml
ig_dp_dl/: __main__.py  cli.py  scrapper.py
